# Tekno-Phantom-agent

./: .env.example  .gitignore  README.md  dev.bat  docker-compose.dev.yml  docker-compose.yml  verify_phases.py
backend/: Dockerfile  pyproject.toml  requirements.txt  run_server.py  start_with_display.sh
backend/app/: config.py  database.py  logging_config.py  main.py  schemas.py
backend/app/auth/: csrf.py  dependencies.py  rate_limiter.py  schemas.py  security.py  service.py
backend/app/brain/: base.py  http_client.py
backend/app/mcp/: browser_client.py  filesystem_client.py
backend/app/models/: __init__.py  project.py  refresh_token.py  user.py
backend/app/routes/: auth.py  projects.py
backend/app/runtime/: executor.py  instruction_parser.py  perception.py  plan_normalizer.py  selector_memory.py  store.py  suite_executor.py  suite_store.py  test_case_store.py  viewer_session.py
backend/tests/: test_admin_auth.py  test_assess_click_select_option.py  test_auto_wait_controls.py  test_executor_selector_fallback.py  test_instruction_parser.py  test_plan_normalizer.py  test_plan_sanitizer.py  test_plan_validation.py  test_run_auth_ownership.py  test_runs.py  test_step7_verification.py  test_step_matrix.py  test_suite_report.py  test_test_cases.py  test_validate_medium_grounding.py  test_viewer_session_manager.py
brain/: Dockerfile
brain/app/: config.py  main.py  schemas.py
brain/app/llm/: anthropic_provider.py  base.py  factory.py  local_vllm.py  openai_provider.py  (+1 more)
frontend/: .env.example  Dockerfile  README.md  package-lock.json
nginx/: default.conf
(+12 files in other folders)
